--- a/src/Components/food.css
+++ b/src/Components/food.css
@@ -5,7 +5,8 @@
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    color: blue;
+    color: green;
+    align-items: center;
 }
 
 .wrapperFood .Pizza {
@@ -13,6 +14,7 @@
     height: 360px;
     border: solid 2px purple;
     font-size: larger;
+    line-height: 2.5em;
 
 }
 
