--- a/src/Components/body.css
+++ b/src/Components/body.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 50px;
-    width: 80%;
+    width: 100%;
     margin-left: 80px;
     
     
@@ -16,3 +16,9 @@
 .container{
     width: 80%;
 }
+.logouts{
+    position: relative;
+    left: 595px;
+}
+
+
