--- a/src/Components/form.css
+++ b/src/Components/form.css
@@ -1,6 +1,9 @@
 .form h3{
     color: purple;
-   margin-left: 400px;
+   position: relative;
+   left: 550px;
+   top: 50px;
+
 }
 .addNewfood{
     line-height: 2em;
@@ -8,5 +11,14 @@
 }
 .addNewfood{
     position: relative;
-    left: 400px;
+    left: 500px;
+    margin-top: 50px;
+}
+.addNewfood fieldset{
+    width: 250px;
+    text-align: center;
+    height: 33vh;
+    border: solid 2px purple;
+    background-color: lightgreen;
+    
 }
